--- a/Star-Wars/Base.lproj/Main.storyboard
+++ b/Star-Wars/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="7lV-Pm-TYZ">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -8,7 +8,7 @@
         <!--Film List View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="FilmListViewController" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="FilmListViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -17,10 +17,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="ekd-N3-W9a">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </imageView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="jkg-NK-UYu">
-                                <rect key="frame" x="0.0" y="56" width="600" height="544"/>
+                                <rect key="frame" x="8" y="64" width="584" height="536"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="RSX-hr-0TV">
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="RSX-hr-0TV">
                                     <size key="itemSize" width="180" height="180"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -37,48 +40,84 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FILM NAME" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="84u-my-NCJ">
                                                     <rect key="frame" x="8" y="8" width="164" height="24"/>
                                                     <fontDescription key="fontDescription" name="Menlo-Bold" family="Menlo" pointSize="20"/>
-                                                    <color key="textColor" red="1" green="0.80000001190000003" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="textColor" red="0.96078431372549022" green="0.94509803921568625" blue="0.2196078431372549" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Director" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mEQ-w9-BKL">
+                                                    <rect key="frame" x="8" y="40" width="58" height="14"/>
+                                                    <fontDescription key="fontDescription" name="Menlo-Bold" family="Menlo" pointSize="12"/>
+                                                    <color key="textColor" red="0.16862745100000001" green="0.53333333329999999" blue="0.94901960780000005" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Director Name" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="odB-SG-R2j">
+                                                    <rect key="frame" x="8" y="54" width="110" height="17"/>
+                                                    <fontDescription key="fontDescription" name="Menlo-Bold" family="Menlo" pointSize="14"/>
+                                                    <color key="textColor" red="0.89411764705882346" green="0.96078431372549022" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
+                                        <color key="backgroundColor" red="0.16862745098039217" green="0.17254901960784313" blue="0.27450980392156865" alpha="0.5" colorSpace="calibratedRGB"/>
                                         <constraints>
+                                            <constraint firstItem="odB-SG-R2j" firstAttribute="top" secondItem="mEQ-w9-BKL" secondAttribute="bottom" id="6KZ-Tl-ul9"/>
                                             <constraint firstItem="84u-my-NCJ" firstAttribute="centerX" secondItem="cBb-A2-dFX" secondAttribute="centerX" id="KKE-hx-d0K"/>
+                                            <constraint firstItem="mEQ-w9-BKL" firstAttribute="leading" secondItem="cBb-A2-dFX" secondAttribute="leading" constant="8" id="Qqp-z4-QNl"/>
+                                            <constraint firstItem="mEQ-w9-BKL" firstAttribute="top" secondItem="84u-my-NCJ" secondAttribute="bottom" constant="8" id="UDP-CI-Ma6"/>
                                             <constraint firstItem="84u-my-NCJ" firstAttribute="top" secondItem="cBb-A2-dFX" secondAttribute="top" constant="8" id="Zbn-GY-HpQ"/>
                                             <constraint firstItem="84u-my-NCJ" firstAttribute="leading" secondItem="cBb-A2-dFX" secondAttribute="leading" constant="8" id="cp0-pG-e07"/>
                                             <constraint firstAttribute="trailing" secondItem="84u-my-NCJ" secondAttribute="trailing" constant="8" id="euY-uX-3eM"/>
+                                            <constraint firstItem="odB-SG-R2j" firstAttribute="leading" secondItem="cBb-A2-dFX" secondAttribute="leading" constant="8" id="jxT-Gp-jMV"/>
                                         </constraints>
                                         <connections>
+                                            <outlet property="director" destination="odB-SG-R2j" id="OjX-Dn-mWX"/>
                                             <outlet property="title" destination="84u-my-NCJ" id="rAF-ax-JUR"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="STAR WARS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fqb-2x-5Oh">
-                                <rect key="frame" x="235" y="20" width="131" height="28"/>
-                                <fontDescription key="fontDescription" name="Menlo-Bold" family="Menlo" pointSize="24"/>
-                                <color key="textColor" red="1" green="0.80000001190000003" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
-                        <color key="backgroundColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" white="0.14999999999999999" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="fqb-2x-5Oh" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="CpG-Ir-gNO"/>
-                            <constraint firstItem="fqb-2x-5Oh" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="EyI-jW-ROC"/>
-                            <constraint firstAttribute="trailing" secondItem="jkg-NK-UYu" secondAttribute="trailing" id="Jyo-N8-eEu"/>
+                            <constraint firstAttribute="trailing" secondItem="jkg-NK-UYu" secondAttribute="trailing" constant="8" id="Jyo-N8-eEu"/>
+                            <constraint firstAttribute="trailing" secondItem="ekd-N3-W9a" secondAttribute="trailing" id="PU6-4d-ROy"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="ekd-N3-W9a" secondAttribute="bottom" id="QC1-iL-u4J"/>
+                            <constraint firstItem="ekd-N3-W9a" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Rxu-sv-vOa"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="jkg-NK-UYu" secondAttribute="bottom" id="cop-2T-5jp"/>
-                            <constraint firstItem="jkg-NK-UYu" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="fht-LN-M2u"/>
-                            <constraint firstItem="jkg-NK-UYu" firstAttribute="top" secondItem="fqb-2x-5Oh" secondAttribute="bottom" constant="8" id="jZv-Sv-atB"/>
+                            <constraint firstItem="jkg-NK-UYu" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="e1h-OP-J0J"/>
+                            <constraint firstItem="jkg-NK-UYu" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="8" id="fht-LN-M2u"/>
+                            <constraint firstItem="ekd-N3-W9a" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="hut-5X-dA6"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="bBC-Bu-wTl"/>
                     <connections>
                         <outlet property="collectionView" destination="jkg-NK-UYu" id="Q4q-KF-b37"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1264" y="439"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="BNr-QD-KTc">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="7lV-Pm-TYZ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="nQr-2S-k6t">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="dfN-2o-Ggq"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pBK-P6-zr0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
             <point key="canvasLocation" x="452" y="439"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="background" width="720" height="1280"/>
+    </resources>
 </document>
